# spdlog_modify

./: CMakeLists.txt  README.md
src/: main.cpp
